
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "honeypoke-extractor"
version = "0.3.3"
description = "Library for extracting and enriching data from HoneyPoke ElasticSearch instances."
dependencies = [
    "requests==2.31.0",
    "elasticsearch==8.11.1",
    'importlib-metadata; python_version<"3.8"',
]
authors = [
    {name = "Jacob Hartman", email = "jacob@j2h2.com"},
    {name = "Jacob Hartman", email = "junyunharold1@gmail.com"},
]
maintainers = [
    {name = "Jacob Hartman", email = "jacob@j2h2.com"},
]
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/bocajspear1/honeypoke-extractor"
Repository = "https://github.com/bocajspear1/honeypoke-extractor"
Issues = "https://github.com/bocajspear1/honeypoke-extractor/issues"

# [tool.setuptools]
# packages = ["honeypoke_extractor"]
[tool.pdm]
distribution = true
